--- a/Casgem.DataAccessLayer/Casgem.DataAccessLayer.csproj
+++ b/Casgem.DataAccessLayer/Casgem.DataAccessLayer.csproj
@@ -10,4 +10,8 @@
     <ProjectReference Include="..\Casgem.EntityLayer\Casgem.EntityLayer.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
